Fixed overflow scrolling for mobile

--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,10 @@
   --light: #9C502A;
 }
 
-body{
+html, body{
   background-color: var(--primary-bg-color);
   overflow-x: hidden;
+  position: relative;
 }
 
 .logo{
@@ -122,29 +123,39 @@ nav{
 .the-tutor{
   background-image: url("./assets/the-tutor-background.png");
   height: 92vh;
-  background-position: bottom right;
+  background-position: top right;
   background-repeat: no-repeat;
   background-size: contain;
 }
 
 .the-tutor-text{
-  display: flex;
-  flex-direction: column;
-  height: 92vh;
+  display: grid;
+  height: 82vh;
   width: 50%;
-  justify-content: center;
-  align-items: flex-start;
+  padding: 10vh;
+  justify-items: center;
+  text-align: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas:
+  "tutortitle"
+  "tutordescription";
+}
+
+.the-tutor-text p{
+  padding: 5vh;
 }
 
 .the-tutor-title{
-  margin: 0 0 10% 10%;
+  grid-area: tutortitle;
   color: var(--main-text-color);
   font-family: 'Poppins', sans-serif;
   font-size: 28px;
 }
 
 .the-tutor-description{
-  margin: 0 10% 0 10%;
+  margin: 5vh 0 10vh 0;
+  grid-area: tutordescription;
   color: var(--main-text-color);
   font-family: 'Poppins', sans-serif;
   font-size: 14px;
@@ -157,7 +168,7 @@ nav{
 }
 
 @media screen and (max-width: 1100px){
-  body{
+  .page{
     overflow-x: hidden;
   }
 
@@ -182,27 +193,18 @@ nav{
     font-size: 14px;
   }
 
-  .the-tutor{
-    background-position: top right;
-    background-size: contain;
-  }
-
   .the-tutor-text{
-    margin: 0 5% 10% 5%;
-    justify-content: space-between;
-    align-items: flex-start;
+    width: 100%;
+    padding: 5vh;
   }
 
   .the-tutor-title{
-    margin: 50% 0 0 10%;
-    font-size: 28px;
+    padding-top: 10vh;
+    font-size: 24px;
   }
 
   .the-tutor-description{
-    margin: 0 10% 50% 10%;
-    font-size: 18px;
-    width: 160%;
-    text-align: center;
+    font-size: 14px;
   }
 
   .nav-links{
